syntax = "proto3";

package admiral.foo.v1;

import "google/api/annotations.proto";

import "api/v1/annotations.proto";

service FooAPI {
  rpc GetFoo(GetFooRequest) returns (GetFooResponse) {
    option (google.api.http) = {
      get: "/api/v1/foo"
    };
    option (admiral.api.v1.action).type = READ;
  }
}

message GetFooRequest {
}

message GetFooResponse {
  string foo = 1;
}
